# LumiX

./: .gitignore  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
benchmark/: README.md  assignment_benchmark.py  framework_comparison.py  production_planning_benchmark.py
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
docs/source/development/: analysis-architecture.rst  core-architecture.rst  design-decisions.rst  extending-analysis.rst  extending-core.rst  extending-goal-programming.rst  extending-indexing.rst  extending-linearization.rst  extending-nonlinear.rst  extending-solution.rst  extending-solvers.rst  extending-utils.rst  goal-programming-architecture.rst  index.rst  indexing-architecture.rst  linearization-architecture.rst  nonlinear-architecture.rst  solution-architecture.rst  solvers-architecture.rst  utils-architecture.rst
docs/source/examples/: basic_lp.rst  cpsat_assignment.rst  driver_scheduling.rst  facility_location.rst  goal_programming.rst  index.rst  mccormick_bilinear.rst  piecewise_functions.rst  production_planning.rst  scenario_analysis.rst  sensitivity_analysis.rst  whatif_analysis.rst
docs/source/getting-started/: installation.rst  (+2 more)
examples/01_production_planning/: README.md  production_planning.py  sample_data.py
examples/02_driver_scheduling/: README.md  driver_scheduling.py  sample_data.py
examples/03_facility_location/: README.md  facility_location.py  sample_data.py
examples/04_basic_lp/: COMPARISON.md  README.md  basic_lp.py  diet_problem.lg  diet_problem.mod  out.txt
examples/05_cpsat_assignment/: README.md  cpsat_assignment.py  sample_data.py
examples/06_mccormick_bilinear/: README.md  rectangle_area.py
examples/07_piecewise_functions/: README.md  exponential_growth.py
examples/08_scenario_analysis/: README.md  sample_data.py  scenario_analysis.py
examples/09_sensitivity_analysis/: README.md  sample_data.py  sensitivity_analysis.py
examples/10_whatif_analysis/: README.md  sample_data.py  whatif_analysis.py
examples/11_goal_programming/: 01_basic_goal_programming.py  02_multi_priority_weighted.py  README.md
notebooks/: 01_basic_diet_problem.ipynb  02_production_planning.ipynb  03_driver_scheduling.ipynb  04_facility_location.ipynb  05_cpsat_assignment.ipynb  06_bilinear_optimization.ipynb  07_piecewise_functions.ipynb  08_scenario_analysis.ipynb  09_sensitivity_analysis.ipynb  10_whatif_analysis.ipynb  11_goal_programming.ipynb  12_timetabling_basic.ipynb  13_timetabling_database.ipynb  14_timetabling_goals.ipynb  15_timetabling_production.ipynb
src/lumix/: __init__.py
tests/: test_goal_programming.py
tutorials/production_planning/: README.md
tutorials/timetabling/: README.md
(+181 files in other folders)
