[project]
name = "lumix-opt"
version = "0.1.1"
description = "A type-safe, IDE-friendly wrapper for optimization solvers with automatic data-driven modeling"
authors = [
    {name = "Tolga BERBER", email="tolga.berber@fen.ktu.edu.tr"},
    {name = "Beyzanur SİYAH", email="beyzanursiyah@ktu.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["optimization", "mathematical-programming", "linear-programming", "solver", "ortools", "gurobi", "cplex", "academic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Academic Free License (AFL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typing-extensions>=4.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
ortools = ["ortools>=9.8.0"]
gurobi = ["gurobipy>=11.0.0"]
cplex = ["cplex>=22.1.0"]
glpk = ["swiglpk>=5.0.0"]
orm = ["sqlalchemy>=2.0.0"]
viz = ["plotly>=5.15.0", "pandas>=2.0.0", "kaleido>=0.2.1"]
all-solvers = ["ortools>=9.8.0", "gurobipy>=11.0.0", "cplex>=22.1.0", "swiglpk>=5.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "build>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.0",
    "sphinxcontrib-mermaid>=0.9.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/tdelphi1981/LumiX"
Documentation = "https://lumix.readthedocs.io"
Repository = "https://github.com/tdelphi1981/LumiX"
Issues = "https://github.com/tdelphi1981/LumiX/issues"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
optixng = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=optixng --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pulp>=3.3.0",
    "pyomo>=6.9.5",
    "jupyterlab>=4.5.0",
]
